--- a/index.html
+++ b/index.html
@@ -44,37 +44,8 @@
 		<!-- Work -->
 			<article id="work" class="wrapper style2">
 				<div class="container">
-					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
-					</header>
-					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-					</footer>
+					<!-- Put this div wherever you want the widget to be embedded -->
+					<div id="gc-scoreboard-widget-267f"></div>
 				</div>
 			</article>
 
@@ -209,6 +180,15 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<!-- Put this before the closing </body> tag -->
+			<script src="https://widgets.gc.com/static/js/sdk.v1.js"></script>
+			<script>
+				window.GC.scoreboard.init({
+					target: "#gc-scoreboard-widget-267f",
+					widgetId: "0e15bdaa-f04e-463f-848d-0f49ebd8bde8",
+					maxVerticalGamesVisible: 4,
+				})
+			</script>
 
 	</body>
 </html>
