--- a/index.html
+++ b/index.html
@@ -22,40 +22,56 @@
 				
 				<ul class="container">
 					<li><a href="https://parislittleleague.org">Home</a></li>
-					<li><a href="#feeder">Feeder</a></li>
+					<!-- <li><a href="#feeder">Feeder</a></li>
 					<li><a href="#minors">Minors</a></li>
 					<li><a href="#majors">Majors</a></li>
-					<li><a href="#juniors">Juniors</a></li>
+					<li><a href="#juniors">Juniors</a></li> -->
+					<li><a href="#state">10U State Tournament</a></li>
 				</ul>
 			</nav>
 
-		<!-- Feeder -->
+		<!-- State -->
 		<article id="feeder" class="wrapper style1">
 			<div class="iframeContainer">
-				<iframe src="scoreboards/feeder.html" frameborder="0"></iframe>
+				<iframe id="stateIframe" src="scoreboards/state.html" frameborder="0"></iframe>
+			</div>
+			<div class="teamContainer">
 			</div>
 		</article>
 
+		<div class="wrapper style1">
+			<a href="https://d21designs.com/illinois_state_little_league/shop/home"><button style="background-color: #fc641b;">Order Tournament Shirts</button></a>
+		</div>
+		
+		<!-- Feeder -->
+		<!-- <article id="feeder" class="wrapper style1">
+			<div class="iframeContainer">
+				<iframe id="feederIframe" src="scoreboards/feeder.html" frameborder="0"></iframe>
+			</div>
+			<div class="teamContainer">
+			</div>
+		</article> -->
+
 		<!-- Minors -->
-		<article id="minors" class="wrapper style2">
+		<!-- <article id="minors" class="wrapper style2">
 			<div class="iframeContainer">
 				<iframe src="scoreboards/minors.html" frameborder="0"></iframe>
 			</div>
-		</article>
+		</article> -->
 
 		<!-- Majors -->
-		<article id="majors" class="wrapper style1">
+		<!-- <article id="majors" class="wrapper style1">
 			<div class="iframeContainer">
 				<iframe src="scoreboards/majors.html" frameborder="0"></iframe>
 			</div>
-		</article>
+		</article> -->
 
 		<!-- Juniors -->
-		<article id="juniors" class="wrapper style2">
+		<!-- <article id="juniors" class="wrapper style2">
 			<div class="iframeContainer">
 				<iframe src="scoreboards/juniors.html" frameborder="0"></iframe>
 			</div>
-		</article>
+		</article> -->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
